# dogs

./: .gitignore  Makefile  manage.py  pyproject.toml  setup.cfg
dogs/: asgi.py  settings.py  urls.py  wsgi.py
dogs_api/: asgi.py  settings.py  urls.py  wsgi.py
dogs_api/dogs/: apps.py  models.py  serializers.py  urls.py  views.py
dogs_api/dogs/migrations/: 0001_initial.py
